# LowConfGateway

./: 1.c  1.txt  README.md  a.out  cscope.files  cscope.in.out  espsdk  filenametags  partitions.csv  ps.sh  run.sh  sdkconfig  sdkconfig.old
doc/: json.txt
gui/GZ248/: ExternQSlider.h  GZ248.pro  GZ248.pro.user.4529ca8  common.cpp  common.h  externqslider.cpp  externqslider.h  httpserver.cpp  httpserver.h  image.qrc  ini.qrc  main.cpp  mainwindow.cpp  mainwindow.h  message.cpp  message.h  mqtt.cpp  mqtt.h  mqttcollection.cpp  mqttcollection.h  qnavigationwidget.cpp  qnavigationwidget.h  subwindow.cpp  subwindow.h  thirdlib  transmit.cpp  transmit.h  webapp.ini
gui/GZ248/httpserver/: HttpExample.cpp  HttpExample.h  LockQueue.hpp  WHttpServer.cpp  httpconnectionhandlerpool.cpp  mongoose.cpp
main/: CMakeLists.txt  common.c  common.h  eth.c  eth.h  hello_world_main.c  message.c  message.h  mqtt.c  mqtt.h  queue.c  queue.h  rbtree.c  rbtree.h  rbtrees.h  regex.cpp  regexc.c  spi.c  spi.h  uart.c  uart.h  update.c  update.h  wifi.c  wifi.h
main/regex/: re.c
mqttsubscribe/doc/: JGD215广播数据详解.docx
mqttsubscribe/interface/cgi/: MAKEFILE.MK  Makefile  getwifi.html  httpurl.html  index.html  seteth.html  setscaninr.html  upgradation.html
mqttsubscribe/interface/src/: MAKEFILE.DEPEND  _md5.cpp  gateway.cpp  mqtt.cpp  spl.cpp  spl.h
mqttsubscribe/makerules/: MAKEFILE_66ak2l.MK  MAKEFILE_COMMON.MK  MAKEFILE_JGD215.MK  MAKEFILE_hi3536.MK  common_header_a8.mk
mqttsubscribe/scripts/: S99jgd215_install.sh  package
mqttsubscribe/thirdlib/package/: cgic.tar.bz2
server/: Makefile  readme
server/interface/app/: MAKEFILE.DEPEND  MAKEFILE.MK
server/interface/cgi/: MAKEFILE.DEPEND  cgi.cpp  (+7 more)
server/makerules/: MAKEFILE_A113D.MK  MAKEFILE_AM5728.MK  MAKEFILE_UBUNTU.MK  MAKEFILE_hi3531d.MK  thirdlib.mk
server/scripts/: S99jgd215.sh  ipkgimage.sh  start.sh
thirdlib/: Makefile  cscope.files  cscope.in.out  filenametags
thirdlib/doc/: GZ231_AT指令.docx
thirdlib/interface/: Makefile
thirdlib/makerules/: MAKEFILE_COMMON.MK  MAKEFILE_WINDOWS.MK  MAKEFILE_hi3531a.MK  common_footer_a8.mk  config.mk  mkcommon.mk
ui/: Makefile  README.md  readme.txt
ui/doc/: GZ231广播分布.docx
ui/interface/: MAKEFILE.MK
ui/makerules/: MAKEFILE_COMMON.MK  package.mk  thirdlib.mk
ui/scripts/: package.c
(+3282 files in other folders)
