idf_component_register(
    SRCS 
    "hello_world_main.c"
    "common.c" 
    "hello_world_main.c"	
    "message.c"
    "mqtt.c"
    "wifi.c"
    "uart.c"
    "rbtree.c"                
    "rbtrees.c"                
    "eth.c"
    "update.c"
    "spi.c"
    "regex.cpp"
    "regexc.c"
    "regex/re.c"
    # "libbson/mongo-c-driver/src/libbson/src/bson/bcon.c"
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-md5.c"
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-atomic.c" 
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-memory.c"
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson.c" 
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-oid.c"
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-clock.c"
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-reader.c"
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-context.c" 
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-string.c"
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-decimal128.c"
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-timegm.c"
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-error.c" 
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-utf8.c"
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-iso8601.c" 
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-value.c"
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-iter.c" 
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-version-functions.c"
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-json.c" 
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-writer.c"
    # "libbson/mongo-c-driver/src/libbson/src/bson/bson-keys.c"
    # "libbson/mongo-c-driver/src/libbson/src/jsonsl/jsonsl.c"
    # "libbson/mongo-c-driver/src/libbson/src/jsonsl/jsonsl.c"
    # "libbson/mongo-c-driver/src/common/common-b64.c"
    # "libbson/mongo-c-driver/src/common/common-md5.c"
    # "libbson/mongo-c-driver/src/common/common-thread.c"

    INCLUDE_DIRS
    "./"
    "./regex/"
    # "libbson/mongo-c-driver/src/libbson/src/jsonsl"
    # "libbson/mongo-c-driver/src/common/"
    # "libbson/mongo-c-driver/src/libbson/src/"
    )

add_definitions(-D BSON_COMPILATION)
